Fix T45009: Bad 'tri area computation' code in knife tool.

Was causing wrong selection of 'outside' face.